--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Switzerland</h1>
+
+	<p>Switzerland is a picturesque country in the heart of Europe, famous for its stunning Alpine landscapes, crystal-clear lakes, and charming villages. It is a perfect destination for nature lovers, adventure enthusiasts, and those seeking tranquility.</p>
+	<hr>
+
+	<h2>Top 5 Attractions</h2>
+	<ol>
+		<li><strong>Matterhorn</strong> - One of the most iconic peaks in the world, perfect for skiing and hiking.</li>
+		<li><em>Lake Geneva</em> - A serene lake surrounded by vineyards and charming towns.</li>
+		<li><strong>Jungfraujoch</strong> - Known as the “Top of Europe,” offering breathtaking mountain views.</li>
+		<li><em>Chateau de chillon</em> - A historic castle located on the shores of Lake Geneva.</li>
+		<li><strong>InterLaken</strong> - A beautiful town nestled between two lakes, ideal for adventure sports.</li>
+	</ol>
+
+	<h2>Must - Try Foods</h2>
+	<ul>
+        <li><strong>Raclette</strong> - Melted cheese served with potatoes, pickles, and onions.</li>
+        <li><em>Fondue</em> - A classic Swiss dish of melted cheese served with bread for dipping.</li>
+        <li><strong>Rösti</strong> - A crispy potato dish often served as a side.</li>
+        <li><em>Zopf</em> - A traditional Swiss bread with a rich and buttery taste.</li>
+        <li><strong>Swiss Chocolate</strong> - Renowned worldwide for its quality and flavor.</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
